# foundry-wrap

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py  uvx.toml
.github/workflows/: release-please.yml
fwrap/: __init__.py
src/foundry_wrap/: __init__.py  __main__.py  cast.py  cli.py  config.py  interface_manager.py  safe.py  script_parser.py  settings.py
src/fwrap/: __init__.py  cli.py  config.py  interface_manager.py  safe.py  script_parser.py
src/safesmith/: __main__.py  cast.py  cli.py  errors.py  interface_manager.py  safe.py  script_parser.py  settings.py
src/safesmith/presets/: IERC1155.sol  IERC20.sol  IERC4626.sol  IERC721.sol  IUniswapV2Pair.sol  IUniswapV2Router.sol  IWETH.sol
test/: test_preset.sol  test_presets.py  test_proxy_detection.py
test/interfaces/: YearnStrategy.sol
