[project]
name = "fwrap"
version = "0.1.0"
description = "A Python wrapper for Foundry's forge scripts with dynamic interface generation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "click>=8.1.0",
    "toml>=0.10.2",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "eth-hash>=0.5.0",
    "safe-eth-py==6.0.0b30",
    "web3>=6.0.0",
    "gnosis-py>=3.9.0",
    "eth-account>=0.9.0",
    "eth-abi>=4.0.0",
]
requires-python = ">=3.8"

[project.scripts]
fwrap = "fwrap.cli:main"

[build-system]
requires = ["hatchling>=1.13.0", "pathspec>=0.10.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fwrap"]

[project.optional-dependencies]
safe = [
    "safe-eth-py==6.0.0b30",
    "eth-hash>=0.5.0",
    "requests>=2.28.0",
] 