[project]
name = "safesmith"
dynamic = ["version"]
description = "A Python wrapper for Foundry's forge scripts with dynamic interface generation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "click>=8.1.0",
    "toml>=0.10.2",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "safe-eth-py>=7.0.0",
    "hatch>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "eth-account>=0.5.0"
]
requires-python = ">=3.8"

[project.scripts]
safesmith = "safesmith.cli:main"

[build-system]
requires = ["hatchling>=1.13.0", "pathspec>=0.10.0"]
build-backend = "hatchling.build"

[tool.hatch.envs.test]
dependencies = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/safesmith {args}"

[tool.hatch.build.targets.wheel]
packages = ["src/safesmith"]

[tool.hatch.version]
path = "src/safesmith/version.py"

[tool.hatch.publish.index]
repo = "pypi"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]